clean up, updated templates for front end

--- a/application/templates/view_all_books.html
+++ b/application/templates/view_all_books.html
@@ -4,7 +4,7 @@
 {% for book in books %}
 {{ book.__str__() }}  
 {% if entity == 'Book' %}
-Person Reading: {{ book.reader.__str__() }}  <br>
+<b> Person Reading: </b> {{ book.reader.__str__() }}  <br>
 <br>
 {% endif %}
 {% endfor %}
