--- a/application/templates/view_all_readers.html
+++ b/application/templates/view_all_readers.html
@@ -5,10 +5,10 @@
         <p>There are currently no readers</p>
         {% else %}
         {% for reader in readers %}
-        {{ reader.__str__() }}  | <a href="{{ url_for('update_reader', id=reader.rid) }}"> Update </a> |  <a href="{{ url_for('get_reader_by_id', id=reader.rid) }}">Page</a><br>
+        {{ reader.__str__() }}  | <a href="{{ url_for('update_reader', id=reader.rid) }}"> Update </a> | <a href="{{ url_for('delete_reader', id=reader.rid) }}"> Delete </a> | <a href="{{ url_for('get_reader_by_id', id=reader.rid) }}">Page</a><br>
         <br>
         {% endfor %}
         {% endif %}
 
-        <a href="{{ url_for('create_reader') }}"> Add New Reader </a>
+        <a href="{{ url_for('create_reader') }}"> Add New Reader </a> 
 {% endblock body %}
